--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.mail.host=smtp.zoner.com
+spring.mail.port=587
+spring.mail.username=pavel@nebesky.eu
+spring.mail.password=Atari800XL
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
