machine learning initial code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 sona.youtube.id = UCqRF_QOlWILqqSR-qOmdoCQ
+spring.profiles.active=dev
+
+spring.mail.host=smtp.zoner.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
